--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <!-- header element -->
 	<header>
-		<img src="img/Rabbits-01-scaled.jpg">
+		<img src="Two-Pet-Rabbits-Oct-11-Blog.jpg">
 	
 	</header>
 
