--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 <!-- header element -->
 	<header>
-		<img src="Two-Pet-Rabbits-Oct-11-Blog.jpeg">
+		<img src=
+		"Two-Pet-Rabbits-Oct-11-Blog.jpeg">
 	
 	</header>
 
