--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- header element -->
 	<header>
 		<img src=
-		"img/Two-Pet-Rabbits-Oct-11-Blog.jpg">
+		"img/cute-rabbits.jpg">
 	
 	</header>
 
@@ -16,7 +16,7 @@
 <main>
 	<h2> About Rabbits </h2>
 	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are amazing creatures with a lot of fluff on them </p>
-	<img src="Rabbits/img/th.jpg">
+	<img src="img/th.jpg">
 	<p>Cute white rabbit </p>
 	<h2> Rabbit breeds </h2>
 	<p> Rabbits come in all sorts of sizes, colours, and regional variations. Here's a few examples of rabbit breeds: </p>
