--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<header>
 		<img src=
 		"img/cute-rabbits.jpg">
-		<link rel="icon" href="img/square-rabbit.jpeg">
+		<link rel="icon" href="img/square-rabbit.jpg">
 	</header>
 
 <!--main element -->
@@ -16,7 +16,7 @@
 <main>
 	<h2> About Rabbits </h2>
 	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are amazing creatures with a lot of fluff on them </p>
-	<img src="img/th.jpeg">
+	<img src="img/th.jpg">
 	<p>Cute white rabbit </p>
 	<h2> Rabbit breeds </h2>
 	<p> Rabbits come in all sorts of sizes, colours, and regional variations. Here's a few examples of rabbit breeds: </p>
