--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<header>
 		<img src=
 		"img/cute-rabbits.jpg">
-		<link rel="icon" href="img/square-rabbit.jpeg">
+		<link rel="icon" href="img/square-rabbit.jpeg"></link>
 	</header>
 
 <!--main element -->
