--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<header>
 		<img src=
 		"img/cute-rabbits.jpg">
-		<link rel="icon" href="img/th.jpg">
+		<img src="https://img.icons8.com/plasticine/100/000000/running-rabbit.png"/>
 	</header>
 
 <!--main element -->
