added css to my page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<header>
 		<img src=
 		"img/cute-rabbits.jpg">
-		<img src="https://img.icons8.com/plasticine/100/000000/running-rabbit.png"/>
+		<link rel="stylesheet" type="icon" src="https://img.icons8.com/plasticine/100/000000/running-rabbit.png"/>
+		<link rel="stylesheet" type="text/css" href="css/rabbits.css">
 	</header>
 
 <!--main element -->
