--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 		<img src=
 		"img/cute-rabbits.jpg">
 		<link rel="stylesheet" type="icon" href="icons8-running-rabbit-100.png">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/rabbits.css">
+		<h1> Rabbits</h1>
 	</header>
 
 <!--main element -->
-<h1> Rabbits </h1>
 <main>
 	<h2> About Rabbits </h2>
 	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are amazing creatures with a lot of fluff on them </p>
 	<img src="img/th.jpg">
 	<p>Cute white rabbit </p>
 	<h2> Rabbit breeds </h2>
-	<p> Rabbits come in all sorts of sizes, colours, and regional variations. Here's a few examples of rabbit breeds: </p>
+	<p> <b> Rabbits come in all sorts of sizes, colours, and regional variations. Here's a few examples of rabbit breeds: </b> </p>
 	<ol> 
 	<li> Dutch Rabbit </li>
 	<li> Lionhead </li>
@@ -28,7 +30,7 @@
 	</ol>
 
 	<!-- Rabbits' diet -->
-	<h2> Rabbits' diet </h2>
+	<h2> <b>Rabbits' diet</b></h2>
 	<p> Rabbits are full-on crudist vegans. Their diet is made up of hay (80%) and vegetables (20%). Click here for a list of food that's safe for rabbits. </p>
 	<ul>
 		<li><a href="https://rabbit.org/suggested-vegetables-and-fruits-for-a-rabbit-diet/"> Vegetables</a></li>
