changes made to css

--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
 <!--main element -->
 <main>
 	<h2> About Rabbits </h2>
-	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are amazing creatures with a lot of fluff on them </p>
+	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are fluffy creatures with long ears. </p>
 	<img src="img/th.jpg">
-	<p>Cute white rabbit </p>
+	<p class="caption"> Cute white rabbit </p>
+
 	<h2> Rabbit breeds </h2>
-	<p> <b> Rabbits come in all sorts of sizes, colours, and regional variations. Here's a few examples of rabbit breeds: </b> </p>
-	<ol> 
+	<p> Rabbits come in all sorts of sizes, colours, and regional variations. Here are a few examples of rabbit breeds: </p>
+	<ol>
 	<li> Dutch Rabbit </li>
 	<li> Lionhead </li>
 	<li> Angora </li>
+	<li> French Lop </li>
+	<li> Flemish Giant</li>
+	<li> Havana </li>
+	<li> Netherlands Dwarf </li>
 	</ol>
 
 	<!-- Rabbits' diet -->
 	<h2> <b>Rabbits' diet</b></h2>
-	<p> Rabbits are full-on crudist vegans. Their diet is made up of hay (80%) and vegetables (20%). Click here for a list of food that's safe for rabbits. </p>
+	<p> Rabbits are full-on crudist vegans. Their diet is made up of hay (80%) and vegetables (20%). For a full list of safe rabbit food, click on the links below. </p>
 	<ul>
 		<li><a href="https://rabbit.org/suggested-vegetables-and-fruits-for-a-rabbit-diet/"> Vegetables</a></li>
 		<li><a href="https://famillypet.com/what-are-rabbits-favorite-treats/"> Rabbit's favourite treats </a></li>
