--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Rabbits </title>
+	<title> Bienvenue to my Rabbit Website! </title>
 </head>
 <body>
 <!-- header element -->
@@ -9,6 +9,8 @@
 		<img src=
 		"img/cute-rabbits.jpg">
 		<link rel="stylesheet" type="icon" href="icons8-running-rabbit-100.png">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/rabbits.css">
