Added an about page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <!--main element -->
 <main>
 	<h2> About Rabbits </h2>
-	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are fluffy creatures with long ears. </p>
+	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are fluffy creatures with long ears.
+	<a href="pages/about.html">Click here to discover more about rabbits!</a> </p>
 	<img src="img/th.jpg">
 	<p class="caption"> Cute white rabbit </p>
 
