--- a/css/about.html
+++ b/css/about.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title> About Rabbits </title>
-</head>
-<header>
 	<link rel="stylesheet" type="text/css" href="css/rabbits.css">
 	<style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 </style>
-</header>
+<h1> About Rabbits</h1>
+<p class="about-rabbits">Rabbis come in a variety of sizes, shapes and colours.</p>
+</head>
 <!--main body--> 
 <body>
 <h1> About Rabbits</h1>
-<p>Rabbis come in a variety of sizes, shapes and colours</p>
+<p class="about-rabbits">Rabbis come in a variety of sizes, shapes and colours.</p>
 </body>
 </html>
