--- a/css/about.html
+++ b/css/about.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 	<title> About Rabbits </title>
-	<link rel="stylesheet" type="text/css" href="css/rabbits.css">
-	<style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-</style>
-<h1> About Rabbits</h1>
-<p class="about-rabbits">Rabbis come in a variety of sizes, shapes and colours.</p>
 </head>
 <!--main body--> 
 <body>
+	<header>
+	<style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+</style>
+<link rel="stylesheet" type="text/css" href="css/rabbits.css">
+	</header>
+<main>
 <h1> About Rabbits</h1>
 <p class="about-rabbits">Rabbis come in a variety of sizes, shapes and colours.</p>
+</main>
 </body>
 </html>
