--- a/css/about.html
+++ b/css/about.html
@@ -1,19 +1,53 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
-	<title> About Rabbits </title>
+	<title> Rabbits </title>
 </head>
-<!--main body--> 
 <body>
+<!-- header element -->
 	<header>
-	<style>
+		<img src=
+		"img/cute-rabbits.jpg">
+		<link rel="stylesheet" type="icon" href="icons8-running-rabbit-100.png">
+		<style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 </style>
-<link rel="stylesheet" type="text/css" href="css/rabbits.css">
+		<link rel="stylesheet" type="text/css" href="css/rabbits.css">
+		<h1> Bienvenue to my Rabbit website!</h1>
 	</header>
+
+<!--main element -->
 <main>
-<h1> About Rabbits</h1>
-<p class="about-rabbits">Rabbis come in a variety of sizes, shapes and colours.</p>
+	<h2> About Rabbits </h2>
+	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are fluffy creatures with long ears.
+	<a href="pages/about.html">Click here to discover more about rabbits!</a> </p>
+	<img src="img/th.jpg">
+	<p class="caption"> Cute white rabbit </p>
+
+	<h2> Rabbit breeds </h2>
+	<p> Rabbits come in all sorts of sizes, colours, and regional variations. Here are a few examples of rabbit breeds: </p>
+	<ol>
+	<li> Dutch Rabbit </li>
+	<li> Lionhead </li>
+	<li> Angora </li>
+	<li> French Lop </li>
+	<li> Flemish Giant</li>
+	<li> Havana </li>
+	<li> Netherlands Dwarf </li>
+	</ol>
+
+	<!-- Rabbits' diet -->
+	<h2> <b>Rabbits' diet</b></h2>
+	<p> Rabbits are full-on crudist vegans. Their diet is made up of hay (80%) and vegetables (20%). For a full list of safe rabbit food, click on the links below. </p>
+	<ul>
+		<li><a href="https://rabbit.org/suggested-vegetables-and-fruits-for-a-rabbit-diet/"> Vegetables</a></li>
+		<li><a href="https://famillypet.com/what-are-rabbits-favorite-treats/"> Rabbit's favourite treats </a></li>
+	</ul>
 </main>
+
+<!-- Footer element -->
+<footer>
+	<p> This site was created during a Tap Tap Kaboom class on Skillshare. &copy; Val </p>
+</footer>
 </body>
 </html>
