--- a/css/about.html
+++ b/css/about.html
@@ -1,9 +1,9 @@
-!DOCTYPE html>
-<html>
-<head>
-	<title> Rabbits </title>
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>About</title>
+  </head>
 <!-- header element -->
 	<header>
 		<img src=
