Building new page

--- a/css/read.html
+++ b/css/read.html
@@ -4,8 +4,19 @@
     <meta charset="utf-8">
     <title>About</title>
   </head>
+
  <body>
+ <!-- Header element -->
+ <header>
+ <img src="Rabbits/img/cute-rabbits.jpg">
+		<link rel="stylesheet" type="icon" href="icons8-running-rabbit-100.png">
+ </header>
+ <main>
  <H1> Read this page</H1>
  <p>Hey there, I hope this page works.</p>
  </body> 
+</main>
+ <footer>
+	<p> This site was created during a Tap Tap Kaboom class on Skillshare. &copy; Val </p>
+</footer>
 </html>
