--- a/css/read.html
+++ b/css/read.html
@@ -8,8 +8,14 @@
  <body>
  <!-- Header element -->
  <header>
- <img src="Rabbits/img/cute-rabbits.jpg">
+ <img src=
+		"img/cute-rabbits.jpg">
 		<link rel="stylesheet" type="icon" href="icons8-running-rabbit-100.png">
+		<style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+</style>
+		<link rel="stylesheet" type="text/css" href="css/rabbits.css">
+		<h1> Bienvenue to my Rabbit website!</h1>
  </header>
  <main>
  <H1> Read this page</H1>
