uploaded new about css file

--- a/css/about.html
+++ b/css/about.html
@@ -14,7 +14,7 @@
 		<style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 </style>
-		<link rel="stylesheet" type="text/css" href="css/rabbits.css">
+		<link rel="stylesheet" type="text/css" href="css/about.css">
 		<h1> Bienvenue to my Rabbit website!</h1>
  </header>
  <main>
