--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <main>
 	<h2> About Rabbits </h2>
 	<p> Rabbits (also known as bunnies, bunsters, or bunny rabbits) are fluffy creatures with long ears.
-	<a href="pages/about.html">Click here to discover more about rabbits!</a> </p>
+	<a href="about.html">Click here to discover more about rabbits!</a> </p>
 	<img src="img/th.jpg">
 	<p class="caption"> Cute white rabbit </p>
 
