--- a/css/about.html
+++ b/css/about.html
@@ -8,13 +8,8 @@
  <body>
  <!-- Header element -->
  <header>
- <img src=
-		"img/cute-rabbits.jpg">
-		<link rel="stylesheet" type="icon" href="icons8-running-rabbit-100.png">
-		<style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-</style>
-		<link rel="stylesheet" type="text/css" href="css/about.css">
+ <img src="img/cute-rabbits.jpg">
+<link rel="stylesheet" type="text/css" href="css/about.css">
 		<h1> Bienvenue to my Rabbit website!</h1>
  </header>
  <main>
