--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title> Rabbits </title>
+	<nav>
+		<ul>
+			<li><a href="about.html">About</a></li>
+		</ul>
+	</nav>
 </head>
 <body>
 <!-- header element -->
