added line of text
Changes are not showing

--- a/css/about.html
+++ b/css/about.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>About</title>
+     <title>About</title>
   </head>
-
  <body>
  <!-- Header element -->
  <header>
@@ -13,7 +11,7 @@
  </header>
  <main>
  <H1> Read this page</H1>
- <p>Hey there, I hope this page works.</p>
+ <p>Hey there, I hope this page works.<br>Not sure why this fucking thing isn't working!</p>
  </body> 
 </main>
  <footer>
