just trying anything to fix this at this point

--- a/css/about.html
+++ b/css/about.html
@@ -7,6 +7,7 @@
  <!-- Header element -->
  <header>
  <img src="img/cute-rabbits.jpg">
+ <link rel="stylesheet" type="text/css" href="css/about.css">
 		<h1> Bienvenue to my Rabbit website!</h1>
  </header>
  <main>
